# data_analysis_course

./: README.md  main.py  pyproject.toml  quiz_seances1_0_et_1_1.py  seance1-0_introduction_analyse_donnees.py  seance1-1_annexe_tutoriel_python.py  seance2_collecte_nettoyage_preparation_echantillonage.py  seance2_collecte_nettoyage_preparation_partie1.py  tp_correction_collecte_nettoyage_preparation.py  tp_correction_introduction_analyse_données.py  tp_seance2_automobile.py
__marimo__/session/: quiz_seances1_0_et_1_1.py.json
